--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <input type="password" name="" required="">
             <label>Password</label>
           </div>
-          <a href="verification-page.html" target="_blank">
+          <a href="#" target="_blank">
             <span></span>
             <span></span>
             <span></span>
